@@ -72,6 +72,7 @@ Version 0.21.0 Beta:
 - SLEEP() was registered as a function when it should have been a sub (counting_pine)
 - #2617069 InStrRev was skipping over some matches (counting_pine)
 - In -g mode, .file/.stabs paths could be emitted with unescaped single backslashes - reported by KetilO (counting_pine)
+- INSTR() could crash if the string to search for was too long (counting_pine)
 
 
 Version 0.20.0 Beta:
